wip on optimisation for multi-mode journeys, some general tidy up. new data version including upcoming York Street closures